objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Australian Students</fullName>
        <description>This is for Australian Students</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Received</fullName>
        </values>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Future Student</fullName>
        </values>
        <values>
            <fullName>Interview Complete</fullName>
        </values>
        <values>
            <fullName>Offer</fullName>
        </values>
        <values>
            <fullName>Offer to Interview</fullName>
        </values>
        <values>
            <fullName>Scholarship</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Overseas Students</fullName>
        <description>This is for Overseas Students</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Future Student</fullName>
        </values>
        <values>
            <fullName>Interview Complete</fullName>
        </values>
        <values>
            <fullName>Offer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>St Andrews Cathedral School</fullName>
                </value>
                <value>
                    <fullName>Gawura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation__c</fullName>
        <label>Cancellation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment_Date__c</fullName>
        <label>Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolment_Period__c</fullName>
        <label>Enrolment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Year</fullName>
                </value>
                <value>
                    <fullName>1 Year to 3 Years</fullName>
                </value>
                <value>
                    <fullName>More than 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Enrolment_Date__c</fullName>
        <label>Enrolment Term</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>House__c</fullName>
        <label>House</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canterbury</fullName>
                </value>
                <value>
                    <fullName>Durham</fullName>
                </value>
                <value>
                    <fullName>Hereford</fullName>
                </value>
                <value>
                    <fullName>Salsibury</fullName>
                </value>
                <value>
                    <fullName>St Paul’s</fullName>
                </value>
                <value>
                    <fullName>Westminster</fullName>
                </value>
                <value>
                    <fullName>Winchester</fullName>
                </value>
                <value>
                    <fullName>York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <label>Interview Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview__c</fullName>
        <label>Interview</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joined__c</fullName>
        <label>Joined</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joining_Year__c</fullName>
        <label>Joining Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                    <default>true</default>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Parent_Type__c</field>
                <operation>equals</operation>
                <value>Father, Mother, Guardian</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Key Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>School Tour</fullName>
                </value>
                <value>
                    <fullName>Quick Enquiry</fullName>
                </value>
                <value>
                    <fullName>Going to Sites</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Concerts</fullName>
                </value>
                <value>
                    <fullName>Expos</fullName>
                </value>
                <value>
                    <fullName>Visits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_to_Interview__c</fullName>
        <label>Offer to Interview</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overseas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overseas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rollover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SACS_Key_Contact__c</fullName>
        <label>SACS Key Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bruce Perry</fullName>
                </value>
                <value>
                    <fullName>Helen Mansfield</fullName>
                </value>
                <value>
                    <fullName>Gail Zeitsch</fullName>
                </value>
                <value>
                    <fullName>Robyn Pedley</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SACS_Others__c</fullName>
        <label>SACS Others</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scholarship_Date__c</fullName>
        <label>Scholarship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Grade__c</fullName>
        <label>School Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Level__c</fullName>
        <label>School Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Junior School</fullName>
                </value>
                <value>
                    <fullName>Middle School</fullName>
                </value>
                <value>
                    <fullName>Senior College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Child</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term - 1</fullName>
                    <default>true</default>
                    <label>Term - 1</label>
                </value>
                <value>
                    <fullName>Term - 2</fullName>
                </value>
                <value>
                    <fullName>Term - 3</fullName>
                </value>
                <value>
                    <fullName>Term - 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_pipeline__c</fullName>
        <formula>&quot;Total Pipeline&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pipeline</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>Student_Name__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>School_Grade__c</columns>
        <columns>Joining_Year__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Lead_Sub_Source__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Campus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Australian_Student</fullName>
        <active>true</active>
        <businessProcess>Australian Students</businessProcess>
        <description>Select when a student is from Australia</description>
        <label>Australian Student</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>For_Offer_to_Enrolment</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( StageName , &quot;Offer&quot;) , ( ISBLANK(   Enrolment_Date__c  ) ) ,false)</errorConditionFormula>
        <errorMessage>If stage &quot;Offer&quot; is selected it is mandatory to put correct &quot;Enrolment Date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Opp_Interview_Complete</fullName>
        <active>true</active>
        <description>When stage Interview complete is selected, then it is mandatory to put interview date &amp; time</description>
        <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;Interview Complete&quot;), OR( ISBLANK(Interview_Time__c), ISBLANK( Interview_Date__c ) ) )</errorConditionFormula>
        <errorMessage>If &quot;Interview Complete&quot; stage is selected it is mandatory to update Interview date &amp; Interview time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Opp_Stage_Future_Student</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;Future Student&quot;), ISBLANK( Future_Enrolment_Date__c ) )</errorConditionFormula>
        <errorMessage>If &quot;Future Student&quot; Stage is selected then it is mandatory to put Enrolment Term</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Opp_Stage_Interview</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName , &quot;Offer to Interview&quot;), OR( ISBLANK(Interview_Time__c), ISBLANK( Interview_Date__c ) ) )</errorConditionFormula>
        <errorMessage>If &quot;Offer to Interview&quot; stage is selected it is mandatory to update Interview date &amp; Interview time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Stage_Enrolled</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( StageName , &quot;Enrolled&quot;) , OR( ISBLANK( TEXT( School_Grade__c ) ), ISBLANK( TEXT( Term__c ) ) , ISBLANK( TEXT( Joining_Year__c ) ) ) ,false)</errorConditionFormula>
        <errorMessage>If Stage &quot;Enrolled&quot; is selected it is mandatory to select School Grade, Term &amp; Joining Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Enrollment_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Future_Enrolment_Date__c &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Future_Enrolment_Date__c</errorDisplayField>
        <errorMessage>Future Enrollment Date cannot be less than or equal to today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SACS_Key_Contact_Is_Other_filled_SACS_Ot</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( SACS_Key_Contact__c , &quot;Other&quot;) &amp;&amp; ISBLANK( SACS_Others__c )</errorConditionFormula>
        <errorDisplayField>SACS_Others__c</errorDisplayField>
        <errorMessage>Please enter SACS Others Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Student_needs_to_be_from_same_family</fullName>
        <active>false</active>
        <errorConditionFormula>Student_Name__r.AccountId &lt;&gt;  AccountId</errorConditionFormula>
        <errorDisplayField>Student_Name__c</errorDisplayField>
        <errorMessage>Student needs to be from the same family</errorMessage>
    </validationRules>
</CustomObject>